overflow fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -716,7 +716,7 @@ body {
   }
 
   .blog-page-wrapper {
-    max-width: 100vw;
+    max-width: calc(100vw - 40px);
     overflow: hidden;
 
     .blogs-nav {
